v1.5.2-重构更新
 - 重构了弹幕姬除外的所有类 修正了警告
 - 修正了伤害量计的伤害输出
 - 我是重构王！