@@ -1,10 +1,11 @@
-package org.WHITECN.commands.Danmuji;
+package org.whitecn.commands.Danmuji;
 
 import net.md_5.bungee.api.chat.HoverEvent;
 import net.md_5.bungee.api.chat.TextComponent;
 import net.md_5.bungee.api.chat.hover.content.Text;
-import org.WHITECN.utils.Danmuji.DanmuHandler;
-import org.WHITECN.utils.TagUtils;
+import org.checkerframework.checker.nullness.qual.NonNull;
+import org.whitecn.utils.Danmuji.DanmuHandler;
+import org.whitecn.utils.TagUtils;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
@@ -16,17 +17,19 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
-public class dmj implements CommandExecutor, TabCompleter {
+import static org.whitecn.Vars.DANMUJI_PREFIX;
+
+public class Danmuji implements CommandExecutor, TabCompleter {
 
     private final DanmuHandler dh;
-    String prefix = "§b§l[Danmuji_LX]§r";
+    String prefix = DANMUJI_PREFIX;
 
-    public dmj(DanmuHandler dh) {
+    public Danmuji(DanmuHandler dh) {
         this.dh = dh;
     }
 
     @Override
-    public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
+    public boolean onCommand(@NonNull CommandSender sender, @NonNull Command cmd, @NonNull String label, String @NonNull [] args) {
         if (!(sender instanceof Player)) {
             sender.sendMessage(prefix+"§c§l该命令仅能被玩家执行");
             return true;
@@ -69,11 +72,11 @@ public class dmj implements CommandExecutor, TabCompleter {
     }
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    public List<String> onTabComplete(@NonNull CommandSender sender, @NonNull Command command, @NonNull String alias, String[] args) {
         if (args.length == 1) {
             return Arrays.asList("setroomid","switch");
         }else if (args.length == 2 && args[0].equals("setroomid")) {
-            return Arrays.asList("请输入数字房间全号");
+            return List.of("请输入数字房间全号");
         }
         return Collections.emptyList();
     }
